* js fix, add overflow hidden to backend form containers

--- a/css/main.less
+++ b/css/main.less
@@ -99,6 +99,9 @@
   border:1px solid #e5e5e5;
   border-top:0;
   background-color:#fff;
+  > div {
+    overflow: hidden;
+  }
 }
 .neochic-woodlets-placeholder {
   border:2px dashed #e5e5e5;
